--- a/Meeting Agenda App/Src/App.fx.yaml
+++ b/Meeting Agenda App/Src/App.fx.yaml
@@ -107,6 +107,7 @@ App As appinfo:
                     ).Value
                 ).Name
             );
+            ClearCollect(ColMeetingAgendaLists,MeetingAgendaLists);
             ClearCollect(
                 AllFutureEvents,
                 Office365Outlook.GetEventsCalendarView(
