--- a/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
+++ b/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
@@ -4435,7 +4435,7 @@
                             MeetingID = variCalUID.icaluid && Displayname = User().FullName
                         )
                     ),
-                    Patch(
+                    IfError(Patch(
                         'Notes-MeetingList',
                         LookUp(
                             'Notes-MeetingList',
@@ -4446,8 +4446,14 @@
                             Title: SelectedMeeting.Subject,
                             Displayname: User().FullName
                         }
-                    ),
-                    Patch(
+                    ),Notify(
+                            "Error while Saving Notes",
+                            NotificationType.Error
+                        ),Notify(
+                            "Notes Saved Successfully",
+                            NotificationType.Success
+                        )),
+                    IfError(Patch(
                         'Notes-MeetingList',
                         Defaults('Notes-MeetingList'),
                         {
@@ -4456,13 +4462,19 @@
                             Notes: 'MeetingDetails notes'.HtmlText,
                             Displayname: User().FullName
                         }
-                    )
-                );
+                    ),
+                Notify(
+                            "Error while Saving Notes",
+                            NotificationType.Error
+                        ),Notify(
+                            "Notes Saved Successfully",
+                            NotificationType.Success
+                        );
                     Notify(
                         "You notes has been saved",
                         NotificationType.Success
                     )
-                );
+                )));
             RadiusBottomLeft: =3
             RadiusBottomRight: =3
             RadiusTopLeft: =3
