--- a/Certification App/Src/AskQuestion_Admin.fx.yaml
+++ b/Certification App/Src/AskQuestion_Admin.fx.yaml
@@ -48,6 +48,7 @@ AskQuestion_Admin As screen:
                     ZIndex: =2
 
                 txtSearch_4 As text:
+                    AccessibleLabel: ="txtSearch_4"
                     BorderColor: =RGBA(219, 219, 219, 1)
                     BorderThickness: =1
                     Color: =RGBA(161, 161, 161, 1)
@@ -82,6 +83,7 @@ AskQuestion_Admin As screen:
                     ZIndex: =5
 
                 userdrp_down_6 As dropdown:
+                    AccessibleLabel: ="userdrp_down_6"
                     BorderColor: =Color.Gray
                     BorderThickness: =0
                     ChevronBackground: =RGBA(0, 0, 0, 0)
@@ -162,6 +164,7 @@ AskQuestion_Admin As screen:
                     ZIndex: =10
 
                 Image7_9 As image:
+                    AccessibleLabel: ="Image7_9"
                     BorderColor: =RGBA(0, 0, 0, 0)
                     Height: =40
                     Image: =User().Image
@@ -185,6 +188,7 @@ AskQuestion_Admin As screen:
                     ZIndex: =13
 
                     icoEnrollList_11 As icon.ShoppingCart:
+                        AccessibleLabel: ="icoEnrollList_11"
                         Height: =53
                         Icon: =Icon.ShoppingCart
                         OnSelect: =Navigate('Responsive EnrollCertificate Screen', ScreenTransition.None)
@@ -219,6 +223,7 @@ AskQuestion_Admin As screen:
                         ZIndex: =6
 
                         Bell_icon_8 As icon.Bell:
+                            AccessibleLabel: ="BellIcon_8"
                             Height: =30
                             Icon: =Icon.Bell
                             OnSelect: |-
