--- a/Meeting Agenda App/Src/AddPollScreen.fx.yaml
+++ b/Meeting Agenda App/Src/AddPollScreen.fx.yaml
@@ -297,11 +297,9 @@ AddPollScreen As screen:
                     }
                 ),Notify(
                         "Error while saving your Poll",
-                        NotificationType.Error
-                    ),Notify(
-                        "Your Poll has been saved successfully",
-                        NotificationType.Success
-                    )
+                        NotificationType.Error,5000
+                    ),false
+                    
             ));
             ForAll(
                 arrQuestionOptions,
@@ -322,10 +320,10 @@ AddPollScreen As screen:
                         NotificationType.Error
                     ),Notify(
                         "Your Poll has been saved successfully",
-                        NotificationType.Success
+                        NotificationType.Success,5000
                     )
             ));
-            Set(
+            /*Set(
                 varcreatepoll,
                 true
             );
@@ -341,7 +339,7 @@ AddPollScreen As screen:
                     NotificationType.Error,
                     0
                 )
-            );
+            );*/
             Clear(arrQuestions);
             Clear(arrQuestionOptions);
             Clear(CountCollection);
@@ -404,7 +402,7 @@ AddPollScreen As screen:
             Height: =112
             Items: |-
                 =Filter(
-                    ColQuestionOptions,
+                    QuestionOptions,
                     Question.Id = ThisItem.ID
                 ).Title
             OnSelect: |+
