--- a/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
+++ b/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
@@ -7950,7 +7950,7 @@
             Height: =32
             Size: =16
             TabIndex: =0
-            Text: =1
+            Text: ="Create Agenda"
             Visible: =varShowCreateAgenda
             X: =800
             Y: =84
