--- a/Certification App/Src/New Certifications request approval.fx.yaml
+++ b/Certification App/Src/New Certifications request approval.fx.yaml
@@ -63,6 +63,7 @@
                     ZIndex: =2
 
                 txtSearch_13 As text:
+                    AccessibleLabel: ="txtSearch_13"
                     BorderColor: =RGBA(219, 219, 219, 1)
                     BorderThickness: =1
                     Color: =RGBA(161, 161, 161, 1)
@@ -89,6 +90,7 @@
                     ZIndex: =4
 
                 Image7_38 As image:
+                    AccessibleLabel: ="Image7_38"
                     BorderColor: =RGBA(0, 0, 0, 0)
                     Height: =40
                     Image: =User().Image
@@ -113,6 +115,7 @@
                     ZIndex: =13
 
                     icoEnrollList_28 As icon.ShoppingCart:
+                        AccessibleLabel: ="icoEnrollList_28"
                         Height: =53
                         Icon: =Icon.ShoppingCart
                         OnSelect: =Navigate('Responsive EnrollCertificate Screen', ScreenTransition.None)
@@ -147,6 +150,7 @@
                         ZIndex: =6
 
                         Bell_icon_25 As icon.Bell:
+                            AccessibleLabel: ="Bell_icon_25"
                             Height: =30
                             Icon: =Icon.Bell
                             OnSelect: |-
@@ -223,6 +227,7 @@
                         ZIndex: =14
 
                     userdrp_down_22 As dropdown:
+                        AccessibleLabel: ="userdrp_down_22"
                         BorderColor: =Color.Gray
                         BorderThickness: =0
                         ChevronBackground: =RGBA(0, 0, 0, 0)
@@ -291,6 +296,7 @@
                         ZIndex: =18
 
                     Icon17_23 As icon.Settings:
+                        AccessibleLabel: ="Icon17_23"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =23
@@ -321,6 +327,7 @@
                 ZIndex: =1
 
                 icoEnrollList_29 As icon.ShoppingCart:
+                    AccessibleLabel: ="icoEnrollList_29"
                     Height: =40
                     Icon: =Icon.ShoppingCart
                     OnSelect: =Navigate('Responsive EnrollCertificate Screen', ScreenTransition.None)
@@ -349,6 +356,7 @@
                         ZIndex: =1
 
                     userdrp_down_23 As dropdown:
+                        AccessibleLabel: ="userdrp_down_23"
                         BorderColor: =Color.Gray
                         BorderThickness: =0
                         ChevronBackground: =RGBA(0, 0, 0, 0)
@@ -414,6 +422,7 @@
                         ZIndex: =5
 
                     Icon17_24 As icon.Settings:
+                        AccessibleLabel: ="Icon17_24"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =15
@@ -451,6 +460,7 @@
                     ZIndex: =12
 
                     Bell_icon_26 As icon.Bell:
+                        AccessibleLabel: ="Bell_icon_26"
                         Height: =22
                         Icon: =Icon.Bell
                         OnSelect: |-
@@ -705,6 +715,7 @@
                         ZIndex: =6
 
                     Icon11_21 As icon.Home:
+                        AccessibleLabel: ="Icon11_21"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =23
@@ -745,6 +756,7 @@
                         ZIndex: =8
 
                     Icon22_21 As icon.ChevronRight:
+                        AccessibleLabel: ="Icon22_21"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =17
@@ -790,6 +802,7 @@
                         ZIndex: =10
 
                     Icon29_21 As icon.ChevronRight:
+                        AccessibleLabel: ="Icon29_21"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =20
@@ -805,6 +818,7 @@
                         ZIndex: =11
 
                     Icon32_21 As icon.Database:
+                        AccessibleLabel: ="Icon32_21"
                         BorderColor: =RGBA(0, 0, 0, 1)
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =22
@@ -934,6 +948,7 @@
                         ZIndex: =19
 
                     Image12_21 As image:
+                        AccessibleLabel: ="Image12_21"
                         Height: =22
                         Image: ='question-octagon'
                         OnSelect: =Navigate(AskQuestion_Admin,ScreenTransition.UnCover);
@@ -946,6 +961,7 @@
                         ZIndex: =20
 
                     Icon5_5 As icon.ChevronDown:
+                        AccessibleLabel: ="Icon5_5"
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =17
                         Icon: =Icon.ChevronDown
@@ -976,6 +992,7 @@
                         ZIndex: =28
 
                     Icon6_5 As icon.ChevronDown:
+                        AccessibleLabel: ="Icon6_5"
                         Color: =RGBA(0, 0, 0, 1)
                         Height: =20
                         Icon: =Icon.ChevronDown
@@ -1148,6 +1165,7 @@
                             ZIndex: =24
 
                         Icon23_21 As icon.Download:
+                            AccessibleLabel: ="Icon23_21"
                             BorderColor: =RGBA(0, 0, 0, 1)
                             Color: =RGBA(0, 0, 0, 1)
                             FocusedBorderThickness: =0
@@ -1260,6 +1278,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue6 As combobox:
+                                                AccessibleLabel: ="DataCardValue"
                                                 BorderColor: =If(IsBlank(Parent.Error), RGBA(0,0,0,1), Color.Red)
                                                 BorderThickness: =1
                                                 ChevronBackground: =RGBA(0, 0, 0, 1)
@@ -1340,6 +1359,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue1 As text:
+                                                AccessibleLabel: ="DataCardValue1"
                                                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                                                 BorderThickness: =1
                                                 Default: =Parent.Default
@@ -1412,6 +1432,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue2 As text:
+                                                AccessibleLabel: ="DataCardValue2"
                                                 BorderColor: =If(IsBlank(Parent.Error), RGBA(0,0,0,1), Color.Red)
                                                 BorderThickness: =1
                                                 Default: =Parent.Default
@@ -1482,6 +1503,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue3 As attachments:
+                                                AccessibleLabel: ="DataCardValue1"
                                                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                                                 BorderThickness: =1
                                                 Color: =RGBA(102, 102, 102, 1)
@@ -1591,6 +1613,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue102 As text:
+                                                AccessibleLabel: ="DataCardValue102"
                                                 BorderColor: =If(IsBlank(Parent.Error), RGBA(0,0,0,1), Color.Red)
                                                 BorderThickness: =1
                                                 Default: =Parent.Default
@@ -1662,6 +1685,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue103 As text:
+                                                AccessibleLabel: ="DataCardValue10"
                                                 BorderColor: =If(IsBlank(Parent.Error), RGBA(0,0,0,1), Color.Red)
                                                 BorderThickness: =1
                                                 Default: =Parent.Default
@@ -1732,6 +1756,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue104 As combobox:
+                                                AccessibleLabel: ="DataCardValue104"
                                                 BorderColor: =If(IsBlank(Parent.Error), RGBA(0,0,0,1), Color.Red)
                                                 BorderThickness: =1
                                                 ChevronBackground: =RGBA(0, 0, 0, 1)
@@ -1809,6 +1834,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue106 As text:
+                                                AccessibleLabel: ="DataCardValue106"
                                                 BorderColor: =If(IsBlank(Parent.Error), RGBA(0,0,0,1), Color.Red)
                                                 BorderThickness: =1
                                                 Default: =Parent.Default
@@ -1878,6 +1904,7 @@
                                                 ZIndex: =1
 
                                             DataCardValue107 As text:
+                                                AccessibleLabel: ="DataCardValue107"
                                                 BorderColor: =If(IsBlank(Parent.Error), RGBA(0,0,0,1), Color.Red)
                                                 BorderThickness: =1
                                                 Default: =Parent.Default
@@ -1929,6 +1956,7 @@
                                         ZIndex: =2
 
                                     Icon4_9 As icon.Reload:
+                                        AccessibleLabel: ="Icon4_9"
                                         Color: =RGBA(0, 0, 0, 1)
                                         Height: =21
                                         Icon: =Icon.Reload
@@ -2040,6 +2068,7 @@
                                     ZIndex: =3
 
                                     "Gallery2_9 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
+                                        AccessibleLabel: ="Gallery2_9"
                                         BorderColor: =RGBA(0, 0, 0, 1)
                                         Fill: =RGBA(242, 242, 242, 1)
                                         FocusedBorderThickness: =0
@@ -2156,6 +2185,7 @@
                                             ZIndex: =8
 
                                         Icon42_5 As icon.View:
+                                            AccessibleLabel: ="Icon42_5"
                                             Color: =RGBA(39, 113, 194, 1)
                                             Height: =30
                                             Icon: =Icon.View
@@ -2202,6 +2232,7 @@
                         ZIndex: =3
 
                         "Gallery2_5 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
+                            AccessibleLabel: ="Gallery2_5"
                             BorderColor: =RGBA(0, 0, 0, 1)
                             Fill: =RGBA(242, 242, 242, 1)
                             FocusedBorderThickness: =0
@@ -2317,6 +2348,7 @@
                                 ZIndex: =8
 
                             Icon42_4 As icon.View:
+                                AccessibleLabel: ="Icon42_4"
                                 Color: =RGBA(39, 113, 194, 1)
                                 Height: =30
                                 Icon: =Icon.View
@@ -2350,6 +2382,7 @@
         ZIndex: =9
 
         Icon29_42 As icon.ChevronRight:
+            AccessibleLabel: ="Icon29_42"
             BorderColor: =RGBA(0, 0, 0, 1)
             Color: =RGBA(0, 0, 0, 1)
             Height: =20
@@ -2384,6 +2417,7 @@
             ZIndex: =32
 
         Icon13_8 As icon.ChevronDown:
+            AccessibleLabel: ="Icon13_8"
             Color: =RGBA(0, 0, 0, 1)
             Height: =20
             Icon: =Icon.ChevronDown
@@ -2546,6 +2580,7 @@
                 ZIndex: =28
 
             Icon23_42 As icon.Download:
+                AccessibleLabel: ="Icon23_42"
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =20
@@ -2621,6 +2656,7 @@
                 ZIndex: =3
 
             Icon22_42 As icon.ChevronRight:
+                AccessibleLabel: ="Icon22_42"
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =17
@@ -2730,6 +2766,7 @@
                 ZIndex: =20
 
             Icon12_9 As icon.ChevronDown:
+                AccessibleLabel: ="Icon12_9"
                 Height: =17
                 HoverFill: =
                 Icon: =Icon.ChevronDown
@@ -2792,6 +2829,7 @@
                 ZIndex: =5
 
             Icon11_42 As icon.Home:
+                AccessibleLabel: ="Icon11_42"
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =23
@@ -2887,6 +2925,7 @@
                 ZIndex: =4
 
             Icon32_42 As icon.Database:
+                AccessibleLabel: ="Icon32_42"
                 BorderColor: =RGBA(0, 0, 0, 1)
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =22
@@ -2929,6 +2968,7 @@
                 ZIndex: =13
 
             Image12_44 As image:
+                AccessibleLabel: ="Image12_44"
                 Height: =22
                 Image: ='question-octagon'
                 OnSelect: =Navigate(AskQuestion_Admin,ScreenTransition.UnCover);
@@ -2939,6 +2979,7 @@
                 ZIndex: =22
 
     Icon2_10 As icon.Hamburger:
+        AccessibleLabel: ="Icon2_10"
         Color: =RGBA(0, 0, 0, 1)
         Height: =21
         Icon: =Icon.Hamburger
@@ -3034,6 +3075,7 @@
             ZIndex: =8
 
         Icon18_6 As icon.Cancel:
+            AccessibleLabel: ="Icon18_6"
             BorderColor: =RGBA(255, 255, 255, 1)
             Color: =RGBA(0, 0, 0, 1)
             FocusedBorderThickness: =3
@@ -3135,6 +3177,7 @@
             ZIndex: =15
 
     cert_Status_toggel As toggleSwitch:
+        AccessibleLabel: ="cert_Status_toggel"
         FalseText: ="Approved"
         FontWeight: =FontWeight.Semibold
         Height: =22
@@ -3164,6 +3207,7 @@
             ZIndex: =12
 
         "UserGallery_24 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+            AccessibleLabel: ="UserGallery_24"
             BorderColor: =RGBA(0, 0, 0, 1)
             Fill: |-
                 =//RGBA(0, 0, 0, 0)
@@ -3207,6 +3251,7 @@
                 ZIndex: =5
 
         UserGalleryCancelIcon_25 As icon.Cancel:
+            AccessibleLabel: ="UserGalleryCancelIcon_25"
             Color: =RGBA(255, 255, 255, 1)
             Fill: =RGBA(255, 0, 0, 1)
             Height: =32
@@ -3219,6 +3264,7 @@
             ZIndex: =14
 
         "ManagerGallery_22 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+            AccessibleLabel: ="ManagerGallery_22"
             Fill: |-
                 =//RGBA(0, 0, 0, 0)
                 Color.White
@@ -3262,6 +3308,7 @@
                 ZIndex: =5
 
         MngrCancelicon_22 As icon.Cancel:
+            AccessibleLabel: ="MngrCancelicon_22"
             BorderThickness: =1
             Color: =RGBA(255, 255, 255, 1)
             Fill: =RGBA(255, 0, 0, 1)
@@ -3276,6 +3323,7 @@
             ZIndex: =16
 
         "ILDGAllery_22 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
+            AccessibleLabel: ="ILDGAllery_22"
             Fill: |-
                 =//RGBA(0, 0, 0, 0)
                 Color.White
@@ -3313,6 +3361,7 @@
                 ZIndex: =5
 
         ILDCancelicon_22 As icon.Cancel:
+            AccessibleLabel: ="ILDCancelicon_22"
             Color: =RGBA(255, 255, 255, 1)
             Fill: =RGBA(255, 0, 0, 1)
             Height: =32
